--- a/UserInterface/Web.config
+++ b/UserInterface/Web.config
@@ -20,7 +20,7 @@
   </system.web>
 
   <connectionStrings>
-    <add name="Context" connectionString="data source=DESKTOP-21083GS\SQLSERVER2019; initial catalog=MVC_Blog1; integrated security=true;" providerName="System.Data.SqlClient" />
+    <add name="Context" connectionString="data source=DESKTOP-21083GS\MSSQLSERVER2019; initial catalog=MVC_Blog; integrated security=true;" providerName="System.Data.SqlClient" />
     
   </connectionStrings>
   
