--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -55,6 +55,8 @@
     <Compile Include="Abstract\IContactDal.cs" />
     <Compile Include="Abstract\IContentDal.cs" />
     <Compile Include="Abstract\IHeadingDal.cs" />
+    <Compile Include="Abstract\IImageFileDal.cs" />
+    <Compile Include="Abstract\IMessageDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
     <Compile Include="Concrete\Context.cs" />
@@ -65,6 +67,8 @@
     <Compile Include="EntityFramework\EfContactDal.cs" />
     <Compile Include="EntityFramework\EfContentDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
+    <Compile Include="EntityFramework\EfImageFileDal.cs" />
+    <Compile Include="EntityFramework\EfMessageDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202105232013305_mig_writer_addstatus.cs" />
     <Compile Include="Migrations\202105232013305_mig_writer_addstatus.designer.cs">
@@ -85,6 +89,18 @@
     <Compile Include="Migrations\202105290843112_mig_statusadd.cs" />
     <Compile Include="Migrations\202105290843112_mig_statusadd.Designer.cs">
       <DependentUpon>202105290843112_mig_statusadd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106050824147_mig_add_message.cs" />
+    <Compile Include="Migrations\202106050824147_mig_add_message.Designer.cs">
+      <DependentUpon>202106050824147_mig_add_message.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106060035337_mig_addimagefile.cs" />
+    <Compile Include="Migrations\202106060035337_mig_addimagefile.Designer.cs">
+      <DependentUpon>202106060035337_mig_addimagefile.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106060036503_mig_addcontactdate.cs" />
+    <Compile Include="Migrations\202106060036503_mig_addcontactdate.Designer.cs">
+      <DependentUpon>202106060036503_mig_addcontactdate.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -114,6 +130,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105290843112_mig_statusadd.resx">
       <DependentUpon>202105290843112_mig_statusadd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106050824147_mig_add_message.resx">
+      <DependentUpon>202106050824147_mig_add_message.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106060035337_mig_addimagefile.resx">
+      <DependentUpon>202106060035337_mig_addimagefile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106060036503_mig_addcontactdate.resx">
+      <DependentUpon>202106060036503_mig_addcontactdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
