--- a/UserInterface/Web.config
+++ b/UserInterface/Web.config
@@ -15,14 +15,18 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="ErrorPage/Page404/"/>
+      <error statusCode="403" redirect="ErrorPage/Page403/"/>
+    </customErrors>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
 
   <connectionStrings>
-     <add name="Context" connectionString="data source=DESKTOP-21083GS\SQLEXPRESS; initial catalog=MVC_Blog; integrated security=true;" providerName="System.Data.SqlClient" /> 
+     <add name="Context" connectionString="data source=DESKTOP-21083GS\SQLEXPRESS; initial catalog=MVC_Blog; integrated security=true;" providerName="System.Data.SqlClient" />
   <!-- <add name="Context" connectionString="data source=DESKTOP-21083GS\MSSQLSERVER2019; initial catalog=MVC_Blog; integrated security=true;" providerName="System.Data.SqlClient" />-->
-    <!-- <add name="Context" connectionString="data source=ENESOZCANN\SQLEXPRESS; initial catalog=MVC_Blog; integrated security=true;" providerName="System.Data.SqlClient" />-->
+    <!--<add name="Context" connectionString="data source=ENESOZCANN\SQLEXPRESS; initial catalog=MVC_Blog; integrated security=true;" providerName="System.Data.SqlClient" />-->
     
   </connectionStrings>
   
